@@ -1,3 +1,10 @@
+2017-05-23  JJ Allaire  <jj@rstudio.com>
+
+        * R/Attributes.R: Execute tools::package_native_routine_registration_skeleton
+          within package rather than current working directory.
+        * src/attributes.cpp: Execute tools::package_native_routine_registration_skeleton
+          within package rather than current working directory.
+
 2017-05-22  Dirk Eddelbuettel  <edd@debian.org>
 
         * R/inline.R (Rcpp.plugin.maker): Whitespace changes
